site/static/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html,
body {
    height: 100%;
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

#root,
#__next {
    isolation: isolate;
}

.heading {
    position: relative;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 2em;
    background-color: #c62368;
    background: rgb(198,35,104);
    background: linear-gradient(360deg, rgba(198,35,104,1) 30%, rgba(198,64,35,1) 89%); 
    color: #fff;
}
.heading .logo {
    display: block;
    margin: auto;
    min-width: 100px;
    width: 20vw;
}
.heading .branding {
    text-align: center;
    margin-bottom: 2em;
}
.heading .preview {
    width: 200px;
    margin-bottom: -25em;
    border-radius: .5em;
    box-shadow:
        0px 0px 0px 3px #251d1a,
        0.3px 2.3px 1.9px rgba(0, 0, 0, 0.052),
        0.8px 5.4px 4.3px rgba(0, 0, 0, 0.075),
        1.5px 9.7px 7.7px rgba(0, 0, 0, 0.092),
        2.4px 16.1px 12.8px rgba(0, 0, 0, 0.108),
        4px 26.5px 21.2px rgba(0, 0, 0, 0.125),
        6.9px 46.2px 37px rgba(0, 0, 0, 0.148),
        15px 100px 80px rgba(0, 0, 0, 0.2)
    ;
}
.heading .download-ps {
    display: block;
    margin: auto;
    width: 200px;
}

.divider {
    position: relative;
    z-index: -1;
    margin-top: -1px;
    margin-bottom: 60vw;
    width: 100%;
    height: 30vw;
    background-repeat: no-repeat;
    background-size: cover;
}

@media only screen and (min-width: 768px) {
    .heading {
        flex-direction: row;
        justify-content: center;
    }
    .heading .branding {
        margin-right: 20vw;
    }
    .heading .branding h1 {
        font-size: 5vw;
    }
    .heading .preview {
        width: 25vw;
        margin-bottom: -20em;
    }

    .divider {
        margin-bottom: 10vw;
    }
}

